1.1.24-beta1
- Fix Issue #169: Keep current image after screen rotation.
- Fix Issue #171: Keep chapter color when scrolling.


1.1.23
- Fix Issue #166: External Url anchor handling.
- Update relink logger text.
- Update logic for download all novel info.
- Update chapter listing to show actual url for external chapter.

1.1.21
- Update jsoup to 1.8.1.
- Add option to refresh all downloaded chapter on novel details.
- Performance updates and bug fixes.
- Update Custom Color pref for older android (API < 11).
- Update relink image, output log to image folder.
- Add filter in Update Activity for external chapter.

1.1.20
- Fix issue #162: update relink image task to cater encoded/decoded image filename
- Add feature to choose custom color from settings.
- Fix issue #160 & #163: Update Text-To-Speech Service binding.
- Add option to enable Text-To-Speech Service (default is disabled).
- Fix issue #156: handle deleted chapter in bookmark.

1.1.19
- Implement feature #153: clear all bookmark on chapter.
- Fix issue #154: remove '+[] from forbiden char for filename.
- Update css to force fit-to-width for non-thumbnailed image.
- Set useragent for WebView to mobile version.
- Implement feature #152: Add download icon for external page.
- Fix issue #152: Update delete chapter logic for external page.
- Fix issue #155 and #158: fix Update Service.
- Fix issue #157: Update polish translation.
- Fix tab color for alternate language.
- Add Prev/Next button in display image activity.

1.1.18c
- Fix issue #148: relink image on thumb images.
- Fix Issue #147: saving external pages.
- Fix Prev/Next button on external pages.
- Update external page handler to handle redirect on blogspot.
- Fix issue #149: novel cannot be loaded (sqlite exception).
- Fix bookmark scrolling issue, might related to issue #146.

1.1.17b
- Update Free Space checker logic.
- Add context menu on Update History.
- Add DB (SDCard) Access Check logic on Main Activity.